apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'maven'

ext.projectIds = ['group': 'com.creative.commons', 'version': '0.1']
group = projectIds.group
version = projectIds.version

configurations {
    serializer {
        description = 'One jvm seriazlier benchmark platform.'
        visible = false
    }
}
configurations.serializer {
    resolutionStrategy {
        failOnVersionConflict()
        force('junit:junit:4.11')
        cacheDynamicVersionsFor(0, 'seconds')
    }
}

configurations.compile.resolutionStrategy {
    cacheChangingModulesFor(0, 'seconds')
}

ext {
    linkHomepage = 'https://github.com/vongosling/jvm-serializer'
    linkCi = 'https://github.com/vongosling/jvm-serializer/issues'
    linkIssue = 'https://github.com/vongosling/jvm-serializer/issues'
    linkScmUrl = 'https://github.com/vongosling/jvm-serializer'
    linkScmConnection = 'scm:git:git://github.com/vongosling/jvm-serializer.git'
    linkScmDevConnection = 'scm:git:ssh://git@github.com:vongosling/jvm-serializer.git'
}

compileJava.options*.compilerArgs = [
        "-Xlint:serial", "-Xlint:varargs", "-Xlint:cast", "-Xlint:classfile",
        "-Xlint:dep-ann", "-Xlint:divzero", "-Xlint:empty", "-Xlint:finally",
        "-Xlint:overrides", "-Xlint:path", "-Xlint:processing", "-Xlint:static",
        "-Xlint:try", "-Xlint:fallthrough", "-Xlint:rawtypes", "-Xlint:deprecation",
        "-Xlint:unchecked", "-Xlint:-options", "-Werror"
]

compileTestJava.options*.compilerArgs = [
        "-Xlint:serial", "-Xlint:varargs", "-Xlint:cast", "-Xlint:classfile",
        "-Xlint:dep-ann", "-Xlint:divzero", "-Xlint:empty", "-Xlint:finally",
        "-Xlint:overrides", "-Xlint:path", "-Xlint:processing", "-Xlint:static",
        "-Xlint:try", "-Xlint:-fallthrough", "-Xlint:-rawtypes", "-Xlint:-deprecation",
        "-Xlint:-unchecked", "-Xlint:-options"
]

compileJava {
    sourceCompatibility = 1.7
    targetCompatibility = 1.7
}

compileTestJava {
    sourceCompatibility = 1.7
    targetCompatibility = 1.7
}

jar {
    baseName = 'Jvm-serializer'
    version = '1.0'
    manifest {
        attributes 'Implementation-Title': 'Jvm serializer', 'Implementation-Version': version
    }
}

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'com.caucho', name: 'hessian', version: '4.0.38'
    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.3'
    compile group: 'com.esotericsoftware', name: 'kryo-shaded', version: '3.0.0'
    compile group: 'org.msgpack', name: 'msgpack', version: '0.6.12'
    compile group: 'org.openjdk.jmh', name: 'jmh-archetypes', version: '1.13'
    //compile group: 'com.esotericsoftware.kryo', name: 'kryo', version: '2.24.0'
    testCompile group: 'junit', name: 'junit', version: '4.+'
    compile('com.google.guava:guava:18.0')
    //testCompile 'org.codehaus.groovy:groovy:2.3.9'
}

test {
    //systemProperties 'property': 'value'
    testLogging {
        showStandardStreams = true
        exceptionFormat 'full'
        events 'started', 'passed', 'skipped', 'failed'
    }
    minHeapSize = '128m'
    maxHeapSize = '256m'
    jvmArgs '-XX:MaxPermSize=128m'
}
